codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__worktree_browser_loading.snap
---
source: tui/src/chatwidget/tests/worktree_picker_tests.rs
assertion_line: 110
expression: "render_bottom_popup(&chat, 80)"
---
 Elpis · model gpt-5.6-sol default · location /tmp/project

  Managed worktrees


›    Loading worktrees…

  enter select · esc back
