codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__worktrees_conversation_choices.snap
---
source: tui/src/chatwidget/tests/worktree_picker_tests.rs
assertion_line: 89
expression: popup
---
 Elpis · model gpt-5.6-sol default · location /tmp/project

  Worktrees


› 1. Continue current conversation  Preserve this conversation in the new
                                    checkout
  2. Start new conversation         Open a fresh conversation in the new
                                    checkout
  3. Browse worktrees               Resume an owner thread or copy a working
                                    directory

  enter select · esc back
