codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__worktrees_fork_choices.snap
---
source: tui/src/chatwidget/tests/worktree_picker_tests.rs
assertion_line: 30
expression: popup
---
 Elpis · model gpt-5.6-sol default · location /tmp/project

  Where should the forked conversation run?


› 1. Current checkout  Keep using the current working directory
  2. New worktree      Create an isolated managed checkout

  enter select · esc back
